refactor: split API/download modules; wire index.html to prompts.js + api.js + download.js; keep globals for backward compatibility

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcode/1.5.3/qrcode.min.js"></script>
     <script src="config.js"></script>
+    <script src="prompts.js"></script>
+    <script src="api.js"></script>
+    <script src="download.js"></script>
 </head>
 <body>
     <div id="report-container">
